force-app/main/default/objects/custom_create217__c/custom_create217__c.object-meta.xml
<CustomObject>
    <label>Custom created object217</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects217</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>