force-app/main/default/objects/custom_create217__c/fields/custom_create_217field539__c.field-meta.xml
<CustomField>
    <fullName>custom_create_217field539__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 217field539</label>
    <type>Checkbox</type>
</CustomField>