force-app/main/default/objects/custom_create217__c/fields/custom_create_217field614__c.field-meta.xml
<CustomField>
    <fullName>custom_create_217field614__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 217field614</label>
    <type>Checkbox</type>
</CustomField>